# frameworks_graphics_uikit

./: .gitignore  CMakeLists.txt  Kconfig  Make.defs  Makefile  README.md  README_zh-cn.md  config_refs.yml  lv_ext.c  lv_ext.h  lv_ext_conf.h  lvx_async.c  lvx_async.h  lvx_font_manager.c  lvx_font_manager.h  lvx_font_stress.c  lvx_font_stress.h
animengine/: lvx_animengine_adapter.c  lvx_animengine_adapter.h  lvx_property_callback_macro.h
bindecoder/: lvx_bin_decoder.c  lvx_bin_decoder.h
css_layout/: lvx_css.c
draw/clipper/: gpc.c  gpc.h  lvx_vector_clipper.c  lvx_vector_clipper.h
draw/shapes/: lvx_vector_shapes.c  lvx_vector_shapes.h
font_manager/: font_cache.c  font_cache.h  font_config.h  font_emoji.c  font_emoji.h  font_log.h  font_manager.c  font_manager.h  font_utils.c  font_utils.h
include/uikit/: uikit.h  uikit_async.h  uikit_conf.h  uikit_font_manager.h  uikit_qrscan.h  uikit_vector_shapes.h
include/uikit/video/: uikit_video.h  uikit_vtun.h
lvx_themes/: lvx_theme_extended.c  lvx_theme_extended.h
lvx_widgets/: lvx_arc_scrollbar.c  lvx_arc_scrollbar.h  lvx_btn.c  lvx_btn.h  lvx_chart.c  lvx_chart.h  lvx_common.c  lvx_common.h  lvx_msgbox.c  lvx_msgbox.h  lvx_picker.c  lvx_picker.h  lvx_radio.c  lvx_radio.h  lvx_switch.c  lvx_switch.h  lvx_widgets.c  lvx_widgets.h
qrscan/: lv_qrscan.c  lv_qrscan.h
rle/: lvx_rle_decoder.c  lvx_rle_decoder.h
src/: uikit.c  uikit_async.c  uikit_font_manager.c  uikit_internal.h
src/draw/shapes/: uikit_vector_shapes.c
src/font_manager/: font_cache.c  font_config.h  font_config_template.json  font_emoji.c  font_emoji.h  font_manager.c  font_manager.h  font_utils.h
src/qrscan/: uikit_qrscan.c
src/video/: uikit_video.c  video_adapter.c  video_adapter.h
test/: CMakeLists.txt  Kconfig  Make.defs  Makefile  lv_ext_demos.c  lv_ext_demos.h  lv_ext_test_demos.h  uikit_demo.c
test/bandx/: bandx_demo.c  bandx_demo.h  lvx_bandx_demo.c  lvx_bandx_demo.h
test/bandx/hal/: backlight.c  backlight.h  clock.c  clock.h  hal.h  imu.h  particle_sensor.c  particle_sensor.h  power.h
test/bandx/page/: _template.c  common.c  dialplate.c  flashlight.c  heart_rate.c  launcher.c  music.c  page.c  page.h  page.inc  settings.c  sleep.c  sport.c  stop_watch.c
test/bandx/resource/: resource.c  resource.h
test/bandx/resource/font/: font.inc
test/bandx/resource/image/: img_src.inc  img_src_arrow_down.c  img_src_arrow_up.c  img_src_battery.c  img_src_bluetooth.c  img_src_centigrade.c  img_src_flashlight.c  img_src_heart.c  img_src_heart_color.c  img_src_heart_rate.c  img_src_icon_add.c  img_src_icon_flag.c  img_src_icon_minus.c  img_src_icon_next.c  img_src_icon_pause.c  img_src_icon_plus.c  img_src_icon_prev.c  img_src_icon_reset.c  img_src_icon_shadow_down.c  img_src_icon_shadow_up.c  img_src_icon_start.c  img_src_icon_stop.c  img_src_icon_volume_add.c  img_src_icon_volume_reduce.c  img_src_music.c  img_src_num_shadow.c  img_src_settings.c  img_src_sleep.c  img_src_sport.c  img_src_step.c  img_src_stop_watch.c  img_src_weather.c
test/bandx/resource/style/: style.c
test/bandx/utils/: lv_anim_label.c  lv_anim_label.h  lv_auto_event.c  lv_auto_event.h  lv_obj_ext_func.c  lv_obj_ext_func.h
test/creation/: lv_create_obj.c  lv_create_obj.h  object_creation_test.c  object_creation_test.h
test/draw/: breathe.c  clipper.c  draw_demos.h  hearts.c  lvx_draw_demos.h  tiger.c
test/font/: font_stress_demo.c  font_stress_demo.h
test/video/: camera_demo.c  camera_demo.h  img_pause.c  img_play.c  lvx_camera_controller.c  lvx_camera_controller.h  lvx_camera_example.c  lvx_camera_example.h  lvx_video_controller.c  lvx_video_controller.h  lvx_video_example.c  lvx_video_example.h  video_controller_demo.c  video_controller_demo.h  video_demo.c  video_demo.h
video/: lvx_video.c  lvx_video.h  lvx_video_adapter.c  lvx_video_adapter.h  lvx_video_config_template.json  lvx_vtun.h
